<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS banking</string>
    <string name="SMS_TEXT">SMS TEXT</string>
    
    <string name="action_bank_list">Manage Banks</string>
    <string name="action_rule_list">Manage Rules</string>
    <string name="action_sub_rule_list">Extraction rules</string>
    <string name="action_preferences">Preferences</string>
     
    
    <string name="action_quit">Quit</string>
    <string name="action_save">Save</string>
    <string name="action_rule_text">Creating new rule</string>
    <string name="action_bank_text">Bank account info</string>
    <string name="action_rate_app">Rate application</string>
    
   
    
    
    <string name="rule_message">Pick constant words:</string>
    <string name="rule_next">Next>></string>
    <string name="rule_name">Rule name:</string>
    
    <string name="bank_add">Add</string>
    <string name="bank_edit">Edit</string>
    <string name="bank_delete">Delete</string>

	<string name="settings_account_currency">Account Currency</string>
	<string name="pref_account_currency_title">Account currency</string>
	<string name="pref_account_currency_summary">Choose default account currency</string>
	<string name="pref_account_currency_dialog_title">Choose currency from list</string>
	
	<string name="popup_create_template">Create new Template</string>
	<string name="popup_create_rule">Create new rule</string>
	<string name="popup_edit_rule">Edit rule</string>
	<string name="popup_delete_rule">Delete rule</string>

	<string name="pref_bank_list_title">My Bank</string>
	<string name="pref_bank_list_summary">Select bank to process</string>
	<string name="pref_bank_list_dialog_title">Choose your bank from the list</string>
	<string name="account_default_currency">Bank account default currency:</string>
	<string name="bank_account_name">Bank account name:</string>
	<string name="sms_bank_sender">Bank SMS sender number (or name):</string>
	<string name="rule_type">Transaction type:</string>
	<string name="sub_rule_parameters">choose parameters to extract:</string>
	<string name="sub_rule_save">Save</string>
	<string name="sub_rule_constant_value">Value:</string>
	<string name="sub_rule_parameter_prompt">Choose parameter to extract</string>
	<string name="sub_rule_add">Add</string>
	<string name="rule_list_hint">To add new rule: pick active bank, click message from the list and choose \"create new rule\".</string>
	<string name="sub_rule_method">Method:</string>
	<string name="sub_rule_phrase">Phrase:</string>
	<string name="sub_rule_result_value">Rusult:</string>
	<string name="sub_rule_decimal_separator">decimal separator</string>
	<string name="sub_rule_trim_text">Ignore n characters (first,last):</string>	
	
</resources>

