<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.khizhny.smsbanking.MainActivity" >
    
    <item
        android:id="@+id/action_preferences"
        android:orderInCategory="100"
        android:title="@string/action_preferences"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bank_list"
        android:orderInCategory="100"
        android:title="@string/action_bank_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rule_list"
        android:orderInCategory="100"
        android:title="@string/action_rule_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_quit"
        android:orderInCategory="100"
        android:title="@string/action_quit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="100"
        android:title="@string/action_rate_app"
        app:showAsAction="never"/>

</menu>
