<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
<LinearLayout   
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sms_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/rule_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/extracted_parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule_type"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_transanction_unknown" />

        <Spinner
            android:id="@+id/transaction_type"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:entries="@array/transaction_types"
            android:prompt="@string/rule_type" />

    </LinearLayout>

    <Button
        android:id="@+id/rule_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/rule_next" />

    <TextView
        android:id="@+id/rule1_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/rule_message"
        android:textSize="20sp" />

    <com.khizhny.ukrsibbanking.FlowLayout
        android:id="@+id/rule1_flow_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:f="http://schemas.android.com/apk/res/com.khizhny.ukrsibbanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        f:horizontalSpacing="0dip"
        f:verticalSpacing="0dip" >

    </com.khizhny.ukrsibbanking.FlowLayout>

</LinearLayout>
</ScrollView>
